--- a/Ending/结业报告.html
+++ b/Ending/结业报告.html
@@ -85,9 +85,9 @@
 
             <h4 class="font-weight-bold  mb-4 pt-3 text-black">设计内容</h4>
             <p class=" lead w-responsive mb-4">
-               一共设计了5个网页，包含：首页（首页.html)、杭州篇（杭州.html）、重庆篇（重庆.html）、西安篇（西安.html）、Ending(Ending.html)。
+               一共设计了5个网页，包含：首页（index.html)、杭州篇（杭州.html）、重庆篇（重庆.html）、西安篇（西安.html）、Ending(Ending.html)。
             </p>
-            <h5 class="font-weight-bold  mb-4 text-black">首页（首页.html）</h5>
+            <h5 class="font-weight-bold  mb-4 text-black">首页（index.html）</h5>
             <p class=" lead w-responsive mb-5">
                 这个网页粗略的介绍了杭州、重庆、西安三个城市。
             </p>
